GitHub Workflow fourth version

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -3,10 +3,10 @@ name: GitHubAction_Devops_Assigment
 on:
   push:
     branches:
-      - main  
+      - main, master  
   pull_request:
     branches:
-      - main
+      - main, master
 
 env:
   BACKEND_IMAGE_NAME: orosalesca/backend_assignment_api
