--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Node runtime as a parent image
-FROM node:23.3.0-slim
+# Stage 1: Build the React application
+FROM node:23.3.0-slim   AS builder
 
 # Set the working directory in the container
 WORKDIR /app
@@ -7,6 +7,7 @@ WORKDIR /app
 # Copy package.json and package-lock.json
 COPY package.json /app 
 COPY package-lock.json /app
+COPY .env /app
 
 # Install app dependencies
 RUN npm install
@@ -18,13 +19,20 @@ COPY src /app/src
 # Build the app
 RUN npm run build
 
-# Install a lightweight static file server to serve the production build
-RUN npm install -g serve
+# Stage 2: Serve the React application
+FROM nginx:alpine
+
+# Copy the build output to the Nginx HTML folder
+COPY --from=builder /app/build /usr/share/nginx/html
 
 # Make port 3000 available to the world outside this container
 EXPOSE 3000
 
+
+# Replace the default Nginx configuration to use port 3000
+RUN sed -i 's/listen       80;/listen       3000;/g' /etc/nginx/conf.d/default.conf
+
 # Define environment variable
 
-# Run the static server to serve the build folder
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Set the command to run Nginx
+CMD ["nginx", "-g", "daemon off;"]
